--- a/resources/style.css
+++ b/resources/style.css
@@ -4,3 +4,21 @@ body{
   background-color: black;
   text-align: center;
 }
+a{
+  color: Aquamarine;
+  font-size: 16px;
+}
+h1{
+  font-size: 50px;
+}
+h2{
+  font-weight: 300;
+  font-size: 42px;
+}
+p{
+  font-size: 21px;
+  color: Gray;
+}
+.copyright{
+  text-align: right;
+}
